step3: cleanup react and get dynamic
- README
- getOne vs getMany
- login
- React router
