# config/swagger.json
@@ -62,22 +62,8 @@
         "/users": {
             "x-swagger-router-controller": "user-controller",
             "get": {
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "includeArchived",
-                        "description": "Flag indicating if archived records should be included in the request.",
-                        "type": "boolean",
-                        "default": false
-                    },
-                    {
-                        "in": "query",
-                        "name": "since",
-                        "type": "integer",
-                        "description": "Retrieve only records since this timestamp in milliseconds elapsed since the UNIX epoch."
-                    }
-                ],
-                "operationId": "getList",
+                "parameters": [],
+                "operationId": "getMany",
                 "responses": {
                     "200": {
                         "description": "Array of users.",
@@ -86,6 +72,102 @@
                             "items": {
                                 "$ref": "#/definitions/User"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/users/{userId}": {
+            "x-swagger-router-controller": "user-controller",
+            "get": {
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "userId",
+                        "description": "User id.",
+                        "type": "string",
+                        "required": true
+                    }
+                ],
+                "operationId": "getOne",
+                "responses": {
+                    "200": {
+                        "description": "Succesfully fetch user.",
+                        "schema": {
+                            "type": "object",
+                            "items": {
+                                "$ref": "#/definitions/User"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "post": {
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "userId",
+                        "description": "User id.",
+                        "type": "string",
+                        "required": true
+                    },
+                    {
+                        "in": "body",
+                        "name": "userData",
+                        "description": "Email and password.",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "name": {
+                                    "type": "string"
+                                },
+                                "age": {
+                                    "type": "number"
+                                },
+                                "mailingAddress": {
+                                    "type": "string"
+                                },
+                                "phone": {
+                                    "type": "string"
+                                },
+                                "email": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "operationId": "updateOne",
+                "responses": {
+                    "200": {
+                        "description": "Successfully updated user.",      
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/User"
                         }
                     },
                     "400": {
@@ -127,7 +209,7 @@
                 "operationId": "login",
                 "responses": {
                     "200": {
-                        "description": "Array of users.",
+                        "description": "Successfully logged in.",            
                         "schema": {
                             "type": "object",
                             "$ref": "#/definitions/User"
@@ -179,7 +261,6 @@
                     "type": "string",
                     "description": "Email."
                 }
-            
             },
             "example": {
                 "userKey": "b8ef5ee6-eaea-4914-aaa2-edb080ff3856",
